Correcting fields sizing (there was a small overflow)

--- a/inkscape/static/css/modal.css
+++ b/inkscape/static/css/modal.css
@@ -140,6 +140,7 @@
   margin: 0px;
   display: block;
   width: 100%;
+  box-sizing: border-box;
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857143;
